--- a/config.yml
+++ b/config.yml
@@ -45,11 +45,11 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "prashant.png"
-    favicon16x16: "prashant.png"
-    favicon32x32: "prashant.png"
-    apple_touch_icon: "prashant.png"
-    safari_pinned_tab: "prashant.png"
+    favicon: "/favicon.ico"
+    favicon16x16: "/favicon-16x16.png"
+    favicon32x32: "/favicon-32x32.png"
+    apple_touch_icon: "/apple-touch-icon.png"
+    safari_pinned_tab: "/safari-pinned-tab.svg"
     disableFingerprinting: true
 
   label:
